# ecosys

./: Makefile  README.md  game.py  requirements.txt  run.py  setup.cfg  train.py
.github/workflows/: python-app.yml
app/: run.py  train.py
ecosys/: __init__.py  entities.py  environment.py  models.py  training.py
ecosys/environment/: __init__.py  ecosys_env.py  entities.py
ecosys/environment/entities/: __init__.py  entity.py  herbivore.py  resource.py
ecosys/models/: __init__.py
ecosys/tests/: test_entities.py
ecosys/training/: __init__.py  trainers.py
tests/: test_entities.py
