[metadata]
name = ecosys
author = fcelli
author_email = fedecel93@gmail.com
version = 0.1
url = https://github.com/fcelli/ecosys
project_urls =
    Bug Tracker = https://github.com/fcelli/ecosys/issues

[options]
package_dir =
    = ecosys
packages = find:
python_requires = >=3.9
install_requires =
    numpy==1.24.1

[options.packages.find]
where = ecosys